--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -80,7 +80,9 @@ p {
   letter-spacing: 2px;
 }
 .xxs-title { /* h6 */
-  letter-spacing: 2px;
+  text-transform: capitalize;
+  font-size: 1.6rem;
+  color: #fff;
 }
 .y-btn {
   color : #fff;
@@ -132,6 +134,70 @@ i {
 .card-body i {
   color: #9a9a9a;
   font-size: 1.3rem;
+}
+/* Volunteers */
+.y-volunteers {
+  .card-img-top {
+    width: 130px;
+    height: 130px;
+  }
+  .text-body-secondary a i {
+    font-size: 1rem;
+  }
+}
+/* Latest News */
+.y-news {
+  .card-body {
+    a {
+        text-decoration: none;
+        color: $firstColor;
+        text-transform: capitalize;
+    
+        i {
+          color: $firstColor;
+        }
+      }
+    .date-publication {
+      background-color: $firstColor;
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 1.3rem;
+      font-weight: 600;
+    }
+  }
+}
+
+/* Footer */
+.stats {
+  & i, span {
+    display: block;
+    color: #fff;
+  }
+  & i {
+    border: 1px solid #fff;
+    border-radius: 100%;
+    width: fit-content;
+    height: fit-content;
+  }
+  & span {
+    font-size: 2rem;
+    font-weight: 600;
+  }
+}
+
+/* Footer */
+.footer {
+  & nav a, address a, address {
+    color: #fff;
+    display: block;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 1.2rem;
+    margin: 1.2rem 0;
+    i {
+      font-size: 1rem;
+    }
+  }
 }
 
 
