Adding of the second page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -32,18 +32,19 @@ p {
 
 .xxl-title { /* h1 */
   letter-spacing: -1px;
-  text-transform: uppercase;
   font-weight: 800;
   font-size: 4rem;
 }
 .xxl-title span {
-  font-weight: 400;
+  font-weight: 600;
+  color: #18bfc3;
+  font-size: 2rem;
 }
 
 .xl-title { /* h2 */
   letter-spacing: 1px;
   color: #555555;
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
   font-weight: 700;
   position: relative;
@@ -159,6 +160,14 @@ i {
   font-size: 1rem;
 }
 
+#carousel1 .carousel-caption {
+  top: 26%;
+}
+
+.y-goal {
+  padding: 40px 20px;
+}
+
 /* Latest News */
 .y-news .card-body a {
   text-decoration: none;
@@ -176,7 +185,7 @@ i {
   font-weight: 600;
 }
 
-/* Footer */
+/* Statistics */
 .stats i, .stats span {
   display: block;
   color: #fff;
