--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -105,9 +105,8 @@ p {
 .selected {
   background-color: #fff !important;
 }
-.active-link {
-  color: #fff ;
-  background-color: #643a79;
+.active {
+  color: $firstColor !important;
 }
 .p-details {
   font-size: 1.2rem;
@@ -207,20 +206,23 @@ i {
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-// Imports
-// @import "phone320";
-// @import "phone480";
-// @import "tab768";
-// @import "desktop992";
+/* Free Properties */
+.nav-link {
+  font-weight: 500;
+}
+.banner-evt {
+  object-fit: cover;
+  width: 100%;
+  height: 362px;
+}
+.banner-slide {
+  object-fit: cover;
+  width: 100%;
+  height: 800px;
+}
+.page-link {
+  &:hover {
+    color: #fff !important;
+    background-color: $firstColor !important;
+  }
+}
